added routing for ban d template

--- a/public/templates/band-dj/index.html
+++ b/public/templates/band-dj/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
   <!-- Top Bar -->
-  <header class="topbar">
+  <header class="topbar" id="top">
+
     <div class="container topbar__inner">
       <a class="brand" href="#">
         <span class="brand__dot" aria-hidden="true"></span>
@@ -61,7 +62,7 @@
       </div>
 
       <div class="hero__media">
-        <img src="./photos/hero.png" alt="Artist hero" class="heroImg" />
+        <img src="./photos/hero.jpg" alt="Artist hero" class="heroImg" />
         <div class="hero__badge">
           <span class="badgeTitle">Next Show</span>
           <span class="badgeMeta">Fri • 10PM • The Venue</span>
@@ -170,7 +171,7 @@
       <div class="sectionHead sectionHead--row">
         <div>
           <h2>Gallery</h2>
-          <p>Auto-loads photos from <code>photos/pic1.png</code>, <code>pic2.png</code>, etc.</p>
+          <p>Auto-loads photos from <code>photos/pic1.jpg</code>, <code>pic2.jpg</code>, etc.</p>
         </div>
 
         <div class="galleryControls">
